# pygames

./: .gitignore  README.md  advanced.py  logs.txt  medium.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
examples/: __init__.py  aliens.py
pygames/: __init__.py  advanced.py  medium.py
pygames/examples/: __init__.py  aliens.py
pygames/pygames_engine/: __init__.py  pygames.py
pygames/pygames_engine/engines/power1/: __init__.py  physics.py
pygames/pygames_engine/engines/power2/: __init__.py  animator.py  player.py
pygames/pygames_engine/utils/: __init__.py  object_manager.py
pygames_engine/: __init__.py  pygames.py
pygames_engine/engines/power1/: __init__.py  physics.py
pygames_engine/engines/power2/: animator.py  player.py
pygames_engine/utils/: __init__.py  object_manager.py
pygames_simplified.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
